Fix dark mode issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,2 +1,6 @@
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply dark:text-white;
+}
